--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+
+
 .contentpane {
     position: relative;
     background-color: #2f2f31;
@@ -35,6 +37,11 @@
     width: 100%;
 }
 
+#largepanel {
+    height: 1000px;
+    width: 100%;
+}
+
 #left {
     left: 0.5%;
 }
@@ -64,9 +71,8 @@
     top: -85px;
 
 }
-
 body {
+    overflow-x: auto;
     margin: 0%;
     background-color: #2B2B30;
-
 }
